--- a/Resources/Private/Partials/Foundation/Cart/ProductVariantList.html
+++ b/Resources/Private/Partials/Foundation/Cart/ProductVariantList.html
@@ -11,7 +11,7 @@
                         : {variant.sku}
                     </p>
                     <p>
-                        <cart:link.action action="removeProduct" product="{variant.product}" variant="{variant}">
+                        <cart:link.action action="removeProduct" product="{variant.product}" beVariant="{variant}">
                             <f:translate key="tx_cart.remove_product"/>
                         </cart:link.action>
                     </p>
