--- a/Resources/Private/Templates/Default/Cart/ShowCart.html
+++ b/Resources/Private/Templates/Default/Cart/ShowCart.html
@@ -1,6 +1,8 @@
 <f:layout name="Default"/>
 
 <f:section name="main">
+    <f:flashMessages renderMode="div" />
+
     <div class="small-12 medium-12 large-12 form-columns">
         <f:if condition="{cart.products}">
             <f:then>
