--- a/Resources/Private/Templates/Default/Product/List.html
+++ b/Resources/Private/Templates/Default/Product/List.html
@@ -32,10 +32,10 @@
                 <td>
                     <f:if condition="{settings.showPageUids}">
                         <f:then>
-                            <f:link.action pageUid="{settings.showPageUids}" action="show" arguments="{product : product}">{product.title}</f:link.action>
+                            <f:link.action pageUid="{settings.showPageUids}" action="show" arguments="{product: product}">{product.title}</f:link.action>
                         </f:then>
                         <f:else>
-                            <f:link.action action="show" arguments="{product : product}">{product.title}</f:link.action>
+                            <f:link.action action="show" arguments="{product: product.uid}">{product.title}</f:link.action>
                         </f:else>
                     </f:if>
                 </td>
