--- a/Resources/Private/Partials/Default/Cart/Form/Address/Shipping.html
+++ b/Resources/Private/Partials/Default/Cart/Form/Address/Shipping.html
@@ -1,4 +1,4 @@
-<div id="shipping-address" class="form-block">
+<div id="shipping-address" class="form-block" style="display: none;">
     <h5 class="form-title"><span><f:translate key="tx_cart_domain_model_order_item.shipping_address"/></span></h5>
     <div class="form-content">
         <fieldset>
@@ -7,15 +7,21 @@
                     <div class="field salutation">
                         <label for="shippingAddress:salutation" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.salutation"/>
-                            <em>*</em></label>
+                            <em>*</em>
+                        </label>
 
                         <div class="input-box">
                             <f:form.textfield id="shippingAddress:salutation" name="shippingAddress[salutation]"
                                               value="{shippingAddress.salutation}"/>
+                            <f:form.validationResults for="shippingAddress">
+                                <f:if condition="{validationResults.flattenedErrors.salutation}">
+                                    <span class="validation-error">{validationResults.flattenedErrors.salutation.0.message}</span>
+                                </f:if>
+                            </f:form.validationResults>
                         </div>
                     </div>
                     <div class="field title">
-                        <label for="shippingAddress:title" class="required">
+                        <label for="shippingAddress:title">
                             <f:translate key="tx_cart_domain_model_order_address.title"/>
                         </label>
 
@@ -27,36 +33,54 @@
                     <div class="field firstName">
                         <label for="shippingAddress:firstName" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.first_name"/>
-                            <em>*</em></label>
+                            <em>*</em>
+                        </label>
 
                         <div class="input-box">
                             <f:form.textfield id="shippingAddress:firstName" name="shippingAddress[firstName]"
                                               value="{shippingAddress.firstName}"/>
+                            <f:form.validationResults for="shippingAddress">
+                                <f:if condition="{validationResults.flattenedErrors.firstName}">
+                                    <span class="validation-error">{validationResults.flattenedErrors.firstName.0.message}</span>
+                                </f:if>
+                            </f:form.validationResults>
                         </div>
                     </div>
                     <div class="field lastName">
                         <label for="shippingAddress:lastName" class="required">
                             <f:translate key="tx_cart_domain_model_order_address.last_name"/>
-                            <em>*</em></label>
+                            <em>*</em>
+                        </label>
 
                         <div class="input-box">
                             <f:form.textfield id="shippingAddress:lastName" name="shippingAddress[lastName]"
                                               value="{shippingAddress.lastName}"/>
+                            <f:form.validationResults for="shippingAddress">
+                                <f:if condition="{validationResults.flattenedErrors.lastName}">
+                                    <span class="validation-error">{validationResults.flattenedErrors.lastName.0.message}</span>
+                                </f:if>
+                            </f:form.validationResults>
                         </div>
                     </div>
                 </li>
                 <li>
                     <label for="shippingAddress:email" class="required">
                         <f:translate key="tx_cart_domain_model_order_address.email"/>
-                        <em>*</em></label>
+                        <em>*</em>
+                    </label>
 
                     <div class="input-box">
                         <f:form.textfield id="shippingAddress:email" name="shippingAddress[email]"
                                           value="{shippingAddress.email}"/>
+                        <f:form.validationResults for="shippingAddress">
+                            <f:if condition="{validationResults.flattenedErrors.email}">
+                                <span class="validation-error">{validationResults.flattenedErrors.email.0.message}</span>
+                            </f:if>
+                        </f:form.validationResults>
                     </div>
                 </li>
                 <li>
-                    <label for="shippingAddress:company" class="required">
+                    <label for="shippingAddress:company">
                         <f:translate key="tx_cart_domain_model_order_address.company"/>
                     </label>
 
@@ -70,11 +94,17 @@
                         <div class="small-12 form-columns">
                             <label for="shippingAddress:street" class="required">
                                 <f:translate key="tx_cart_domain_model_order_address.street"/>
-                                <em>*</em></label>
+                                <em>*</em>
+                            </label>
 
                             <div class="input-box">
                                 <f:form.textfield id="shippingAddress:street" name="shippingAddress[street]"
                                                   value="{shippingAddress.street}"/>
+                                <f:form.validationResults for="shippingAddress">
+                                    <f:if condition="{validationResults.flattenedErrors.street}">
+                                        <span class="validation-error">{validationResults.flattenedErrors.street.0.message}</span>
+                                    </f:if>
+                                </f:form.validationResults>
                             </div>
                         </div>
                     </div>
@@ -83,11 +113,17 @@
                             <div class="field">
                                 <label for="shippingAddress:zip" class="required">
                                     <f:translate key="tx_cart_domain_model_order_address.zip"/>
-                                    <em>*</em></label>
+                                    <em>*</em>
+                                </label>
 
                                 <div class="input-box">
                                     <f:form.textfield id="shippingAddress:zip" name="shippingAddress[zip]"
                                                       value="{shippingAddress.zip}"/>
+                                    <f:form.validationResults for="shippingAddress">
+                                        <f:if condition="{validationResults.flattenedErrors.zip}">
+                                            <span class="validation-error">{validationResults.flattenedErrors.zip.0.message}</span>
+                                        </f:if>
+                                    </f:form.validationResults>
                                 </div>
                             </div>
                         </div>
@@ -100,15 +136,20 @@
                                 <div class="input-box">
                                     <f:form.textfield id="shippingAddress:city" name="shippingAddress[city]"
                                                       value="{shippingAddress.city}"/>
+                                    <f:form.validationResults for="shippingAddress">
+                                        <f:if condition="{validationResults.flattenedErrors.lastName}">
+                                            <span class="validation-error">{validationResults.flattenedErrors.lastName.0.message}</span>
+                                        </f:if>
+                                    </f:form.validationResults>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="small-12 form-columns">
-                            <label for="shippingAddress:country" class="required">
+                            <label for="shippingAddress:country">
                                 <f:translate key="tx_cart_domain_model_order_address.country"/>
-                                <em>*</em></label>
+                            </label>
 
                             <div class="input-box">
                                 <f:form.textfield id="shippingAddress:country" name="shippingAddress[country]"
