[TASK] add eID functions to add products through ajax to cart

--- a/Resources/Private/Partials/Default/Cart/Product.html
+++ b/Resources/Private/Partials/Default/Cart/Product.html
@@ -47,7 +47,7 @@
     </td>
     <td class="last">
         <f:link.action action="removeProduct" arguments="{product: product.id}">
-            <span class="delete-link">x</span>
+            <span class="delete-link" title="<f:translate key='tx_cart.remove_product'/>">x</span>
         </f:link.action>
     </td>
 </tr>
