--- a/Resources/Private/Partials/Default/Cart/ProductWithVariant.html
+++ b/Resources/Private/Partials/Default/Cart/ProductWithVariant.html
@@ -57,7 +57,7 @@
                 </td>
                 <td>
                     <cart:link.action action="removeProduct" product="{variant.product}" beVariant="{variant}">
-                        <span class="delete-link"><f:translate key="tx_cart.remove_product"/></span>
+                        <span class="delete-link" title="<f:translate key='tx_cart.remove_product'/>">x</span>
                     </cart:link.action>
                 </td>
             </tr>
