--- a/Resources/Private/Templates/Default/Cart/ShowMiniCart.html
+++ b/Resources/Private/Templates/Default/Cart/ShowMiniCart.html
@@ -2,20 +2,15 @@
 
 <f:section name="main">
     <div id="tx-cart-minicart">
+        <div>
+            <span class="count">{cart.count}</span> <f:translate key="tx_cart.plugin.mini_cart.products_in_cart" />
+        </div>
         <f:if condition="{cart.products}">
-            <f:then>
-                <div>
-                    <f:translate key="tx_cart.plugin.mini_cart.products_in_cart" arguments="{0: '{cart.count}'}"></f:translate>
-                </div>
-                <div>
-                    <f:link.page pageUid="{settings.cart.pid}">
-                        <f:translate key="tx_cart.plugin.mini_cart.go_to_cart_page"/>
-                    </f:link.page>
-                </div>
-            </f:then>
-            <f:else>
-                <f:translate key="tx_cart.plugin.mini_cart.empty_cart"/>
-            </f:else>
+            <div style="{f:if(condition: cart.count, then: 'display: block;', else: 'display: none;')}">
+                <f:link.page pageUid="{settings.cart.pid}">
+                    <f:translate key="tx_cart.plugin.mini_cart.go_to_cart_page"/>
+                </f:link.page>
+            </div>
         </f:if>
     </div>
 </f:section>
